# RexPlayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: boot.h.927E98D8ABE355B3.idx  boot_arm64.cpp.367C106BD927E338.idx  boot_x86.cpp.2734C3DCF92400D2.idx  cpu_optimizer.cpp.FD77E4909B03F2B7.idx  cpu_optimizer.h.11CD1E71870C8F71.idx  device_manager.cpp.CC732F8926CDF9D3.idx  device_manager.h.C4C9E80F8939DF51.idx  display.cpp.AA420F9A19BFF374.idx  display.h.DB8A629D6BEDF406.idx  display_widget.cpp.9BBAB3AEEC5A0281.idx  display_widget.h.624D68E9ECA040F7.idx  embedded_kernel.cpp.DF7CCB4FB9C2C539.idx  embedded_kernel.h.3E38FF79C3CDEF77.idx  gpu_bridge.cpp.CDB0865D37D76FC1.idx  gpu_bridge.h.5A5107B025083A78.idx  hvf_arm64_adapter.cpp.605A700E218B41C8.idx  hvf_arm64_adapter.h.710D9F271402C915.idx  hypervisor.h.9736209EA7CB6D38.idx  hypervisor_factory.cpp.44DF263DFFC5E77D.idx  i8042.cpp.87EF22BE160A2100.idx  i8042.h.CE537E240751D6A8.idx  input_handler.cpp.795E54891F7BBF5F.idx  input_handler.h.AE3056A8570CB69B.idx  instance_manager.cpp.70C7D6BB3EC972FD.idx  instance_manager.h.05BFB016198A1D4B.idx  main.cpp.E3BEAD5F7A5A03F5.idx  mainwindow.cpp.EF5AC69818D2105D.idx  mainwindow.h.8E43AFFD7776BD70.idx  memory.h.98F4C38F2A26D6FA.idx  memory_manager.cpp.DC1CB164F83F6CA3.idx  memory_manager.h.90D3FCD03D766BC2.idx  memory_optimizer.cpp.C1A58638A0210201.idx  memory_optimizer.h.21E45B0874FDCEB7.idx  pci_host.cpp.7FD845EAC5D52F70.idx  pci_host.h.8262B117BDF69962.idx  platform.h.F42FABC9776B8D55.idx  platform_macos.cpp.2326BA972E58A2B5.idx  renderer.h.8E3D58E5D07F8146.idx  rtc.cpp.E20A8C3812F13A70.idx  rtc.h.CC40295D447DB0C2.idx  (+24 more)
.github/workflows/: ci.yml  release.yml
.omx/: metrics.json
.omx/logs/: hooks-2026-03-16.jsonl  turns-2026-03-16.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
android/device/rex/common/: BoardConfigCommon.mk  device_common.mk  init.rex.rc
android/device/rex/common/sepolicy/: file_contexts  frida.te  vsock_device.te
android/device/rex/rex_arm64/: AndroidProducts.mk  BoardConfig.mk  device.mk  fstab.rex
android/device/rex/rex_x86_64/: AndroidProducts.mk  BoardConfig.mk  device.mk  fstab.rex
android/kernel/: arm64_rex_defconfig  x86_64_rex_defconfig
cmake/: FindHVF.cmake  FindKVM.cmake  FindVenus.cmake  FindVirgl.cmake  FindWHPX.cmake
config/: default.toml
docs/: ARCHITECTURE.md  CONTRIBUTING.md
docs/superpowers/plans/: 2026-03-18-qemu-backend-migration-errata.md  2026-03-18-qemu-backend-migration.md
docs/superpowers/specs/: 2026-03-18-qemu-backend-migration-design.md
middleware/: Cargo.toml
middleware/rex-config/: Cargo.toml
middleware/rex-config/src/: lib.rs
middleware/rex-devices/: Cargo.toml
middleware/rex-devices/src/: lib.rs  virtio_balloon.rs  virtio_blk.rs  virtio_console.rs  virtio_gpu.rs  virtio_input.rs  virtio_mmio.rs  virtio_net.rs  virtio_snd.rs  virtio_vsock.rs  virtqueue.rs
middleware/rex-ffi/: Cargo.toml  build.rs
middleware/rex-ffi/src/: lib.rs
middleware/rex-filesync/: Cargo.toml
middleware/rex-filesync/src/: lib.rs
middleware/rex-frida/: Cargo.toml
middleware/rex-frida/src/: anti_detection.rs  lib.rs  manager.rs  script_injector.rs
middleware/rex-network/: Cargo.toml
middleware/rex-network/src/: dhcp.rs  dns.rs  lib.rs
middleware/rex-update/: Cargo.toml
middleware/rex-update/src/: lib.rs
packaging/linux/: rexplayer.appdata.xml  rexplayer.desktop
packaging/macos/: Info.plist
packaging/windows/: installer.nsi
scripts/: build_aosp.sh  fetch_android.sh  fetch_frida.sh  gen_android_dtb.sh  package.sh
src/devices/legacy/: i8042.cpp  i8042.h  pci_host.cpp  pci_host.h  rtc.cpp  rtc.h  uart_16550.cpp  uart_16550.h
src/emu/: emulator_process.cpp  emulator_process.h  grpc_display.cpp  grpc_display.h  window_grabber.cpp  window_grabber.h
src/gpu/: display.cpp  display.h  gpu_bridge.cpp  gpu_bridge.h  renderer.h  shader_cache.cpp  shader_cache.h  software_renderer.cpp  software_renderer.h  venus_renderer.cpp  venus_renderer.h  virgl_renderer.cpp  virgl_renderer.h
src/gui/: display_widget.cpp  display_widget.h  frida_panel.cpp  frida_panel.h  input_handler.cpp  input_handler.h  keymap_editor.cpp  keymap_editor.h  main.cpp  mainwindow.cpp  mainwindow.h  settings_dialog.cpp  settings_dialog.h
src/hal/: hypervisor_factory.cpp
src/hal/hvf/: hvf_arm64_adapter.cpp  hvf_arm64_adapter.h  hvf_arm64_types.h  hvf_hypervisor.cpp  hvf_hypervisor.h  hvf_hypervisor_arm64.cpp
src/hal/include/rex/hal/: hypervisor.h  memory.h  types.h  vcpu.h
src/hal/kvm/: kvm_hypervisor.cpp  kvm_hypervisor.h
src/hal/whpx/: whpx_hypervisor.cpp  whpx_hypervisor.h
src/platform/: async_io.h  async_io_linux.cpp  async_io_macos.cpp  async_io_windows.cpp  platform.h  platform_linux.cpp  platform_macos.cpp  platform_windows.cpp
src/qemu/: qemu_config.cpp  qemu_config.h  qemu_process.cpp  qemu_process.h  qmp_client.cpp  qmp_client.h
src/spice/: spice_client.cpp  spice_client.h  spice_display.cpp  spice_display.h  spice_input.cpp  spice_input.h
src/vmm/: boot_arm64.cpp  boot_x86.cpp  cpu_optimizer.cpp  cpu_optimizer.h  device_manager.cpp  embedded_kernel.cpp  embedded_kernel.h  instance_manager.cpp  instance_manager.h  io_optimizer.cpp  io_optimizer.h  memory_manager.cpp  memory_optimizer.cpp  memory_optimizer.h  snapshot.cpp  vm.cpp
src/vmm/include/rex/ffi/: callbacks.h
src/vmm/include/rex/vmm/: boot.h  device_manager.h  memory_manager.h  snapshot.h  vm.h
src/vnc/: vnc_client.cpp  vnc_client.h
tests/: CMakeLists.txt
tests/benchmarks/: benchmark_framework.h
tests/gpu_tests/: test_software_renderer.cpp
tests/hal_tests/: test_boot_arm64.cpp  test_device_manager.cpp  test_kvm_integration.cpp  test_memory_manager.cpp  test_types.cpp
tests/qemu_tests/: test_qemu_config.cpp  test_qmp_client.cpp
