[workspace]
resolver = "2"
members = [
    "rex-ffi",
    "rex-devices",
    "rex-frida",
    "rex-network",
    "rex-filesync",
    "rex-config",
    "rex-update",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["RexPlayer Team"]

[workspace.dependencies]
# rust-vmm crates
vm-memory = "0.16"
vm-virtio = "0.2"
virtio-queue = "0.13"
virtio-bindings = "0.2"
vmm-sys-util = "0.12"

# Async runtime
tokio = { version = "1", features = ["full"] }

# FFI
cxx = "1.0"
cxx-build = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
prost = "0.13"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Misc
bytes = "1"
libc = "0.2"
