[workspace]
resolver = "2"
members = [
    "rex-frida",
    "rex-config",
    "rex-update",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["RexPlayer Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
