[package]
name = "rex-devices"
version.workspace = true
edition.workspace = true

[dependencies]
vm-memory.workspace = true
virtio-queue.workspace = true
virtio-bindings.workspace = true
vmm-sys-util.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile = "3"
